// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a grid > should change themes 1`] = `
[
  "ctx.save();",
  "ctx.lineWidth = 1",
  "ctx.strokeStyle = "#fff"",
  "ctx.beginPath();",
  "ctx.moveTo(33.166666666666664, 0);",
  "ctx.lineTo(33.166666666666664, 100);",
  "ctx.stroke();",
  "ctx.beginPath();",
  "ctx.moveTo(66.83333333333334, 0);",
  "ctx.lineTo(66.83333333333334, 100);",
  "ctx.stroke();",
  "ctx.beginPath();",
  "ctx.moveTo(0, 33.166666666666664);",
  "ctx.lineTo(100, 33.166666666666664);",
  "ctx.stroke();",
  "ctx.beginPath();",
  "ctx.moveTo(0, 66.83333333333334);",
  "ctx.lineTo(100, 66.83333333333334);",
  "ctx.stroke();",
  "ctx.restore();",
]
`;

exports[`a grid > should change themes 2`] = `
[
  "ctx.fillStyle = "#fff"",
  "ctx.fillRect(0, 0, 33.166666666666664, 33.166666666666664);",
]
`;

exports[`a grid > should draw borders 1`] = `
[
  "ctx.save();",
  "ctx.lineWidth = 1",
  "ctx.strokeStyle = "#000"",
  "ctx.beginPath();",
  "ctx.moveTo(33.166666666666664, 0);",
  "ctx.lineTo(33.166666666666664, 100);",
  "ctx.stroke();",
  "ctx.beginPath();",
  "ctx.moveTo(66.83333333333334, 0);",
  "ctx.lineTo(66.83333333333334, 100);",
  "ctx.stroke();",
  "ctx.beginPath();",
  "ctx.moveTo(0, 33.166666666666664);",
  "ctx.lineTo(100, 33.166666666666664);",
  "ctx.stroke();",
  "ctx.beginPath();",
  "ctx.moveTo(0, 66.83333333333334);",
  "ctx.lineTo(100, 66.83333333333334);",
  "ctx.stroke();",
  "ctx.restore();",
]
`;

exports[`a grid > should theme six adjacent cells 1`] = `
[
  "ctx.save();",
  "ctx.lineWidth = 1",
  "ctx.strokeStyle = "#000"",
  "ctx.save();",
  "ctx.strokeStyle = "#fff"",
  "ctx.beginPath();",
  "ctx.moveTo(33.166666666666664, 0);",
  "ctx.lineTo(33.166666666666664, 67.33333333333334);",
  "ctx.stroke();",
  "ctx.restore();",
  "ctx.beginPath();",
  "ctx.moveTo(33.166666666666664, 67.33333333333334);",
  "ctx.lineTo(33.166666666666664, 100);",
  "ctx.stroke();",
  "ctx.save();",
  "ctx.strokeStyle = "#fff"",
  "ctx.beginPath();",
  "ctx.moveTo(66.83333333333334, 0);",
  "ctx.lineTo(66.83333333333334, 67.33333333333334);",
  "ctx.stroke();",
  "ctx.restore();",
  "ctx.beginPath();",
  "ctx.moveTo(66.83333333333334, 67.33333333333334);",
  "ctx.lineTo(66.83333333333334, 100);",
  "ctx.stroke();",
  "ctx.save();",
  "ctx.strokeStyle = "#fff"",
  "ctx.beginPath();",
  "ctx.moveTo(0, 33.166666666666664);",
  "ctx.lineTo(100, 33.166666666666664);",
  "ctx.stroke();",
  "ctx.restore();",
  "ctx.beginPath();",
  "ctx.moveTo(0, 66.83333333333334);",
  "ctx.lineTo(100, 66.83333333333334);",
  "ctx.stroke();",
  "ctx.restore();",
]
`;

exports[`a grid > should theme two adjacent cells 1`] = `
[
  "ctx.save();",
  "ctx.lineWidth = 1",
  "ctx.strokeStyle = "#000"",
  "ctx.save();",
  "ctx.strokeStyle = "#fff"",
  "ctx.beginPath();",
  "ctx.moveTo(33.166666666666664, 0);",
  "ctx.lineTo(33.166666666666664, 32.666666666666664);",
  "ctx.stroke();",
  "ctx.restore();",
  "ctx.beginPath();",
  "ctx.moveTo(33.166666666666664, 32.666666666666664);",
  "ctx.lineTo(33.166666666666664, 100);",
  "ctx.stroke();",
  "ctx.beginPath();",
  "ctx.moveTo(66.83333333333334, 0);",
  "ctx.lineTo(66.83333333333334, 100);",
  "ctx.stroke();",
  "ctx.beginPath();",
  "ctx.moveTo(0, 33.166666666666664);",
  "ctx.lineTo(100, 33.166666666666664);",
  "ctx.stroke();",
  "ctx.beginPath();",
  "ctx.moveTo(0, 66.83333333333334);",
  "ctx.lineTo(100, 66.83333333333334);",
  "ctx.stroke();",
  "ctx.restore();",
]
`;

exports[`a grid > should theme two adjacent cells 2`] = `
[
  "ctx.save();",
  "ctx.lineWidth = 1",
  "ctx.strokeStyle = "#fff"",
  "ctx.beginPath();",
  "ctx.moveTo(33.166666666666664, 0);",
  "ctx.lineTo(33.166666666666664, 100);",
  "ctx.stroke();",
  "ctx.beginPath();",
  "ctx.moveTo(66.83333333333334, 0);",
  "ctx.lineTo(66.83333333333334, 100);",
  "ctx.stroke();",
  "ctx.beginPath();",
  "ctx.moveTo(0, 33.166666666666664);",
  "ctx.lineTo(100, 33.166666666666664);",
  "ctx.stroke();",
  "ctx.beginPath();",
  "ctx.moveTo(0, 66.83333333333334);",
  "ctx.lineTo(100, 66.83333333333334);",
  "ctx.stroke();",
  "ctx.restore();",
]
`;
